#94 fix alignment of menu icon

--- a/src/app/shared/layout/main-layout/main-layout.component.css
+++ b/src/app/shared/layout/main-layout/main-layout.component.css
@@ -42,7 +42,8 @@
   display: flex;
   padding: 1rem;
 }
-mat-icon {
+
+.language-switch mat-icon {
   cursor: pointer;
   width: 64px;
 }
